[package]
name = "anymaps"
version = "0.1.0"
edition = "2021"
description = "Offline mapping & navigation app with decentralized, privacy-preserving messaging and social layers."
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "anymaps_lib"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing-subscriber = "0.3"
anyhow = "1.0"
mockall = "0.14"
proptest = "1.10"
tempfile = "3.25"
assert_matches = "1.5"
pmtiles = { version = "0.19", features = ["mmap-async-tokio", "tilejson"] }
rstar = "0.12"
lru = "0.16"
nonzero_ext = "0.3"
storage-bindings = "0.2"

[build-dependencies]
tauri-build = { version = "2", features = [] }
